2003-09-06	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added driver/tl880demux.c for demux functions.
	* Added information on cSemaphore to doc/myhd_154.txt.
	* Added driver/tl880dma.c for DMA functions.
	* Removed debuglogs/ information from README.

2003-08-26	Mike Bourgeous
	
	* Added driver/tl880modes.c for a future video mode table.

2003-08-25	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added HiPix I2C devices to doc/i2c.txt
	* Added correct HiPix card detection to driver/tl880kern.c
	* Added driver/tl880dpc.c for functions related to setting video modes
	  and toggling video output.

2003-08-23	Mike Bourgeous		<nitrogen@slimetech.com>

	* Fixed comment in WinTV-HD firmware extract script.
	* Changed 8020 to 8024 in the HPIP range in tl880doc.txt.
	* Removed two of the "still needed" items from README.
	* Fixed a bug regarding I2C client allocation, attachment, and
	  detachment.

2003-08-18	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on more registers.

2003-08-16	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on more registers.

2003-08-15	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on more registers.
	* Added more information to tl880doc.txt about sync generator (such as
	  names of some of the fields).

2003-08-14	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_set_dpc_pll_const function to driver/tl880init.c
	* Created new tool - tools/dpc/setconst.c
	* Created new tool - tools/dpc/getconst.c
	* Renamed tools/dpc/dpcaux to tools/dpc/dpcsync

2003-08-11	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added documentation on sync generator registers to tl880doc.txt

2003-07-28	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added more information to doc/myhd_154.txt and doc/tl880doc.txt,
	  including new memory offsets and a list of some of the register
	  blocks of the internal TL880 components.

2003-07-24	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added initial MSP34xx support.